// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display already bound alert message 1`] = `
<Alert
  className="big-spacer-bottom width-60"
  variant="error"
>
  <FormattedMessage
    defaultMessage="onboarding.import_organization.already_bound_x"
    id="onboarding.import_organization.already_bound_x"
    values={
      Object {
        "avatar": <img
          alt="GitHub"
          className="little-spacer-left"
          src="/images/sonarcloud/github.svg"
          width={16}
        />,
        "boundAvatar": <OrganizationAvatar
          className="little-spacer-left"
          organization={
            Object {
              "avatar": "bound-avatar",
              "key": "bound",
              "name": "Bound",
            }
          }
          small={true}
        />,
        "boundName": <strong>
          Bound
        </strong>,
        "name": <strong>
          foo
        </strong>,
      }
    }
  />
</Alert>
`;

exports[`should display an alert message 1`] = `
<Alert
  className="big-spacer-bottom width-60"
  variant="error"
>
  <div
    className="markdown"
  >
    onboarding.import_organization.org_not_found
    <ul>
      <li>
        onboarding.import_organization.org_not_found.tips_1
      </li>
      <li>
        onboarding.import_organization.org_not_found.tips_2
      </li>
    </ul>
  </div>
</Alert>
`;

exports[`should display unbound installations 1`] = `
<div
  className="boxed-group"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.import_organization.import_org_details
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <div
      className="display-flex-center"
    >
      <div
        className="display-inline-block"
      >
        <IdentityProviderLink
          className="display-inline-block"
          identityProvider={
            Object {
              "backgroundColor": "blue",
              "iconPath": "icon/path",
              "installationUrl": "https://alm.application.url",
              "key": "github",
              "name": "GitHub",
            }
          }
          onClick={[Function]}
          small={true}
          url="https://alm.application.url"
        >
          onboarding.import_organization.choose_organization_button.github
        </IdentityProviderLink>
      </div>
      <div
        className="display-flex-stretch"
      >
        <div
          className="vertical-pipe-separator"
        >
          <div
            className="vertical-separator "
          />
          <span
            className="note"
          >
            or
          </span>
          <div
            className="vertical-separator"
          />
        </div>
        <form
          className="big-spacer-top big-spacer-bottom"
          onSubmit={[Function]}
        >
          <div
            className="form-field abs-width-400"
          >
            <label
              className="text-normal"
              htmlFor="select-unbound-installation"
            >
              onboarding.import_organization.choose_unbound_installation_x.github
            </label>
            <Select
              className="input-super-large"
              clearable={false}
              id="select-unbound-installation"
              labelKey="name"
              onChange={[Function]}
              optionRenderer={[Function]}
              options={
                Array [
                  Object {
                    "installationId": "12345",
                    "key": "foo",
                    "name": "Foo",
                  },
                ]
              }
              placeholder="onboarding.import_organization.choose_organization"
              value=""
              valueKey="installationId"
              valueRenderer={[Function]}
            />
          </div>
          <SubmitButton
            disabled={true}
          >
            continue
          </SubmitButton>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 1`] = `
<div
  className="boxed-group"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.import_organization.import_org_details
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <div
      className="display-flex-center"
    >
      <div
        className="display-inline-block"
      >
        <IdentityProviderLink
          className="display-inline-block"
          identityProvider={
            Object {
              "backgroundColor": "blue",
              "iconPath": "icon/path",
              "installationUrl": "https://alm.application.url",
              "key": "github",
              "name": "GitHub",
            }
          }
          onClick={[Function]}
          small={true}
          url="https://alm.application.url"
        >
          onboarding.import_organization.choose_organization_button.github
        </IdentityProviderLink>
      </div>
    </div>
  </div>
</div>
`;
